2005-10-01  Runa Bhattacharjee <runa@bengalinux.org>

	* configure.in: Added "bn" (Bengali) to ALL_LINGUAS.

2005-09-19  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.12.2.

2005-09-19  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Fix the totally broken --device

2005-09-18  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.12.1.

2005-09-10  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Translate the Extract stock item.

2005-09-10  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Add a --device option for gnome-volume-manager.

2005-09-06  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Add a cast.

2005-09-06  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Set the cdparanoia read speed preference on every rip, just to
	make sure.

2005-09-06  Ross Burton  <ross@burtonini.com>

	* help/sound-juicer/C/sound-juicer.xml:
	Fix typo.

2005-09-05  Ross Burton  <ross@burtonini.com>

	* README:
	Updated.

2005-09-05  Ross Burton  <ross@burtonini.com>

	* Makefile.am:
	* doap.rdf.in:
	Generate a DOAP file at dist-time and ship it.

2005-09-05  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.12!

2005-09-04  Roozbeh Pournader  <roozbeh@farsiweb.info>

	* configure.in: Added "fa" (Persian) to ALL_LINGUAS.

2005-08-25  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Bind F1 to Help.

2005-08-23  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.11.92.

2005-08-18  Ross Burton  <ross@burtonini.com>

	* help/sound-juicer/C/sound-juicer.xml:
	Move the namespace declarations to their usage so libxml strips
	them, thus letting distcheck pass.

2005-08-12  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-volume.c: (bacon_volume_scale_new):
	  Fix scrolling over widget (ported from Totem).

2005-08-12  Ross Burton  <ross@burtonini.com>

	* src/sj-play.[ch]: