@@ -87,16 +87,6 @@ fi
 AM_GCONF_SOURCE_2
 
 
-# Optionally enable a hack so that no CD-ROMs being found is not fatal. Yes, I
-# use this because I code on my CD-less laptop.
-AC_MSG_CHECKING([whether to ignore missing CD-ROM errors])
-AC_ARG_ENABLE(ignore-missing-cd,
-        [AC_HELP_STRING([--enable-ignore-missing-cd],[Ignore missing CD-ROM])],
-        AC_MSG_RESULT([yes]) AC_DEFINE(IGNORE_MISSING_CD, 1, [Ignore missing CD-ROM drives]),
-        AC_MSG_RESULT([no])
-        )
-
-
 # Optionally enable G* deprecations
 AC_MSG_CHECKING([whether to enable deprecation warnings])
 AC_ARG_ENABLE(deprecations,
@@ -114,6 +104,12 @@ else
         AC_MSG_RESULT([no])
 fi
 
+AC_MSG_CHECKING([whether to enable debug output])
+AC_ARG_ENABLE(debug,
+        [AC_HELP_STRING([--enable-debug],[Enable debug output])],
+        AC_MSG_RESULT([yes]) AC_DEFINE(ENABLE_DEBUG, 1, [Enable debug output]),
+        AC_MSG_RESULT([no])
+        )
 
 # We require Scroll Keeper 0.3.5 or above for the help
 SCROLLKEEPER_BUILD_REQUIRED=0.3.5
