@@ -1,3 +1,10 @@
+2005-10-07  Ross Burton  <ross@burtonini.com>
+
+	* configure.in:
+	* src/sound-juicer.h:
+	* src/sj-main.c:
+	Add --enable-debug and start using it (backport from HEAD).
+
 2005-10-01  Runa Bhattacharjee <runa@bengalinux.org>
 
 	* configure.in: Added "bn" (Bengali) to ALL_LINGUAS.
